# test_ci_cd

./: .clang-tidy  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
cmake/: GitVersion.cmake
docker/: Dockerfile
scripts/: 0_prepare.sh  analyze.sh  build.sh  common.sh  configure.sh  docker_setup.sh  init.sh  install.sh  install_pre_commit_hook.sh  package_artifacts.sh  pipeline.sh  pre-commit  smee.sh  test.sh  test_robot.sh  test_sanity.sh  test_units.sh
scripts/pipeline/: build.sh  configure.sh  package.sh
src/: main.cpp  mainwindow.h  version.h.in
tests/robot/: robot.sh  tests.robot
tests/unit_tests/: common.h  main.cpp  tst_example1.cpp  tst_example2.cpp
